src/test/ui/resolve/suggest-type.stderr
error[E0433]: failed to resolve: use of undeclared type or module `Cstring`
  --> $DIR/suggest-type.rs:8:13
   |
LL |     let _ = Cstring::new("hello").unwrap();
   |             ^^^^^^^
   |             |
   |             use of undeclared type or module `Cstring`
   |             help: a struct with a similar name exists (notice the capitalization): `CString`

error[E0433]: failed to resolve: use of undeclared type or module `foO`
  --> $DIR/suggest-type.rs:11:13
   |
LL |     let _ = foO::bar();
   |             ^^^
   |             |
   |             use of undeclared type or module `foO`
   |             help: a module with a similar name exists (notice the capitalization): `foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
